<resources>
    <string name="app_name">WeatherPulse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_locations">Manage locations</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="sunny">Sunny</string>
    <string name="City">cairo</string>
    <string name="_25">25</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="clouds">Clouds</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="feels_like">Feels like</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_Speed">Wind Speed</string>
    <string name="degree">°</string>

    <string name="tempValue">%1$d°</string>
    <string name="pressureValue">%1$d hPa</string>
    <string name="windSpeedValue">%1$.2f meter/sec</string>
    <string name="percentage">%1$d %%</string>
    <string name="_11_00">11:00</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <string name="network_fail">You\'re offline! Check your internet connection.</string>
    <string name="network_success">You\'re online!</string>
    <string name="menu_addlocation">Add location</string>
    <string name="weather">Weather</string>
    <string name="cairo">Cairo</string>
</resources>